--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "test:html": "globstar nu-html-checker dist/*.html",
         "test:js": "eslint src/js/",
         "test:scss": "stylelint src/sass/",
-        "build": "npm-run-all build:* test",
+        "build": "npm-run-all build:*",
         "build:clean": "mkdirp dist && rm -r dist && mkdirp dist",
         "build:copy": "copyfiles -a -u 1 -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" dist",
         "build:sass": "node-sass --output-style compact -o dist/css src/sass",
@@ -31,7 +31,7 @@
     "dependencies": {},
     "devDependencies": {
         "autoprefixer-cli": "^1.0.0",
-        "browser-sync": "^2.26.3",
+        "browser-sync": "^2.26.13",
         "copyfiles": "^2.1.0",
         "eslint": "^5.14.1",
         "globstar": "^1.0.0",
