--- a/src/db/app.json
+++ b/src/db/app.json
@@ -1,19 +1,20 @@
-{"products":[
-  { "id":"cake",
+{
+  "product": [
+  {
+    "id":"cake",
+    "class": "small",
     "name":"Zio Stefano's Doughnut",
     "price":9,
     "description":"Treat yourself with this soft, freshly baked cookie. The recipe has been handed down from generation to generation in our family and it has won us several first place prizes in local competitions.",
     "images":["<img class=\"active\" src=\"images/doughnut.svg\">"]
   },
-  { "id": "breakfast",
+  {
+    "id":"breakfast",
     "name":"Zia Giulia's Breakfast",
     "price":9,
     "description":"There's no better way to start your day than indulging yourself with a cup of fresh Italian coffee and crispy waffels. Made just for you on the spot, this breakfast combo has been our guests' favorite for over 50 years.",
     "images":[
-      "<img class=\"active\" src=\"images/breakfast/breakfast.svg\">",
-      "<img class=\"coffee-cappuccino\" src=\"images/breakfast/cappuccino.svg\">",
-      "<img class=\"coffee-latte\" src=\"images/breakfast/latte.svg\">",
-      "<img class=\"coffee-macchiato\" src=\"images/breakfast/macchiato.svg\">"
+      "<img class=\"active\" src=\"images/breakfast.svg\">"
     ],
     "params":{
       "coffee":{
@@ -28,7 +29,8 @@
       }
     }
   },
-  { "id":"pizza",
+  {
+    "id":"pizza",
     "name":"Nonna Alba's Pizza",
     "price":20,
     "description":"The true taste of Italy &ndash; homemade pizza as prepared by our grandmothers in old-fashoned brick ovens. Choose your favorite topping and enjoy your comfort food! All ingredients come straight from eco-friendly, trusted farms in the Italian countryside.",
@@ -78,7 +80,8 @@
       }
     }
   },
-  { "id":"salad",
+  {
+    "id":"salad",
     "name":"Nonno Alberto's Salad",
     "price":9,
     "description":"A delicious salad made of fresh, home-grown products on a crispy lettuce base.",
@@ -107,5 +110,7 @@
         }
       }
     }
-  }]
+  }
+],
+"order": []
 }
