--- a/src/db/app.json
+++ b/src/db/app.json
@@ -1,7 +1,7 @@
 {
   "product": [
     {
-      "id": "cake",
+      "id":"cake",
       "class": "small",
       "name": "Zio Stefano's Doughnut",
       "price": 9,
@@ -11,7 +11,7 @@
       ]
     },
     {
-      "id": "breakfast",
+    "id":"breakfast",
       "class": "small",
       "name": "Zia Giulia's Breakfast",
       "price": 9,
@@ -24,29 +24,16 @@
           "label": "Coffee type",
           "type": "radios",
           "options": {
-            "latte": {
-              "label": "Latte",
-              "price": 1,
-              "default": true
-            },
-            "cappuccino": {
-              "label": "Cappuccino",
-              "price": 1
-            },
-            "espresso": {
-              "label": "Espresso",
-              "price": 1
-            },
-            "macchiato": {
-              "label": "Macchiato ",
-              "price": 1
-            }
+            "latte": {"label": "Latte", "price": 1, "default": true},
+            "cappuccino": {"label": "Cappuccino", "price": 1},
+            "espresso": {"label": "Espresso", "price": 1},
+            "macchiato": {"label": "Macchiato", "price": 1}
           }
         }
       }
     },
     {
-      "id": "pizza",
+    "id":"pizza",
       "name": "Nonna Alba's Pizza",
       "price": 20,
       "description": "The true taste of Italy &ndash; homemade pizza as prepared by our grandmothers in old-fashoned brick ovens. Choose your favorite topping and enjoy your comfort food! All ingredients come straight from eco-friendly, trusted farms in the Italian countryside.",
@@ -66,81 +53,32 @@
           "label": "Sauce",
           "type": "radios",
           "options": {
-            "tomato": {
-              "label": "Tomato",
-              "price": 0,
-              "default": true
-            },
-            "cream": {
-              "label": "Sour cream",
-              "price": 2
-            }
+            "tomato": {"label": "Tomato", "price": 0, "default": true},
+            "cream": {"label": "Sour cream", "price": 2}
           }
         },
         "toppings": {
           "label": "Toppings",
           "type": "checkboxes",
           "options": {
-            "olives": {
-              "label": "Olives",
-              "price": 2,
-              "default": true
-            },
-            "redPeppers": {
-              "label": "Red peppers",
-              "price": 2,
-              "default": true
-            },
-            "greenPeppers": {
-              "label": "Green peppers",
-              "price": 2,
-              "default": true
-            },
-            "mushrooms": {
-              "label": "Mushrooms",
-              "price": 2,
-              "default": true
-            },
-            "basil": {
-              "label": "Fresh basil",
-              "price": 2,
-              "default": true
-            },
-            "salami": {
-              "label": "Salami",
-              "price": 3
-            }
+            "olives": {"label": "Olives", "price": 2, "default": true},
+            "redPeppers": {"label": "Red peppers", "price": 2, "default": true},
+            "greenPeppers": {"label": "Green peppers", "price": 2, "default": true},
+            "mushrooms": {"label": "Mushrooms", "price": 2, "default": true},
+            "basil": {"label": "Fresh basil", "price": 2, "default": true},
+            "salami": {"label": "Salami", "price": 3}
           }
         },
         "crust": {
           "label": "pizza crust",
           "type": "select",
           "options": {
-            "standard": {
-              "label": "standard",
-              "price": 0,
-              "default": true
-            },
-            "thin": {
-              "label": "thin",
-              "price": 2
-            },
-            "thick": {
-              "label": "thick",
-              "price": 2
-            },
-            "cheese": {
-              "label": "cheese in edges",
-              "price": 5
-            },
-            "wholewheat": {
-              "label": "wholewheat",
-              "price": 3
-            },
-            "gluten": {
-              "label": "with extra gluten",
-              "price": 0
-            }
+            "standard": {"label": "standard", "price": 0, "default": true},
+            "thin": {"label": "thin", "price": 2},
+            "thick": {"label": "thick", "price": 2},
+            "cheese": {"label": "cheese in edges", "price": 5},
+            "wholewheat": {"label": "wholewheat", "price": 3},
+            "gluten": {"label": "with extra gluten", "price": 0}
           }
         }
       }
@@ -165,38 +103,13 @@
           "label": "Ingredients",
           "type": "checkboxes",
           "options": {
-            "cucumber": {
-              "label": "Cucumber",
-              "price": 1,
-              "default": true
-            },
-            "tomatoes": {
-              "label": "Tomatoes",
-              "price": 1,
-              "default": true
-            },
-            "olives": {
-              "label": "Olives",
-              "price": 1,
-              "default": true
-            },
-            "feta": {
-              "label": "Feta cheese",
-              "price": 1
-            },
-            "cheese": {
-              "label": "Cheese",
-              "price": 1
-            },
-            "herbs": {
-              "label": "Fresh herbs",
-              "price": 1,
-              "default": true
-            },
-            "pepper": {
-              "label": "Black pepper",
-              "price": 1
-            }
+            "cucumber": {"label": "Cucumber", "price": 1, "default": true},
+            "tomatoes": {"label": "Tomatoes", "price": 1, "default": true},
+            "olives": {"label": "Olives", "price": 1, "default": true},
+            "feta": {"label": "Feta cheese", "price": 1},
+            "cheese": {"label": "Cheese", "price": 1},
+            "herbs": {"label": "Fresh herbs", "price": 1, "default": true},
+            "pepper": {"label": "Black pepper", "price": 1}
           }
         }
       }
@@ -255,5 +168,5 @@
       "starters": ["lemonWater"]
     }
   ],
-  "booking": []
-}
+    "booking": []
+  }
