--- a/src/db/app.json
+++ b/src/db/app.json
@@ -119,7 +119,7 @@
   "event": [
     {
       "id": 1,
-      "date": "2019-01-01",
+      "date": "2019-01-03",
       "hour": "12:30",
       "table": 1,
       "repeat": false,
@@ -168,5 +168,15 @@
       "starters": ["lemonWater"]
     }
   ],
-    "booking": []
+    "booking": [
+      {"id": 1,
+        "date": "2020-12-04",
+        "hour": "12:30",
+        "table": 1,
+        "repeat": false,
+        "duration": 4,
+        "ppl": 3,
+        "starters": []
+      }
+    ]
   }
